fix map size and z-index so it is movable again

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -292,7 +292,7 @@ textarea {
 	right: 50%;
 	top: 75px;
 	bottom: 10px;
-    z-index: -1; /* hacky */
+    z-index: 3000; /* FIXME: check z-indexes  */
 }
 
 .mainContent {
